src/test/ui/loops/loop-break-value-no-repeat.stderr
error[E0571]: `break` with value from a `for` loop
  --> $DIR/loop-break-value-no-repeat.rs:12:9
   |
LL |         break 22
   |         ^^^^^^^^ can only break with a value inside `loop` or breakable block
help: instead, use `break` on its own without a value inside this `for` loop
   |
LL |         break
   |         ^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0571`.
